# hjh_hi3861

board1/: BUILD.gn  README.md  board1.c  board1.h  iot_config.h  iot_main.c  iot_profile.c  iot_profile.h  packge.c  packge.h  wifi_connecter.c
board1/air780eg/: air780eg.c  air780eg.h
board1/algorithm/: crc.c  crc.h
board1/community/: community.c  community.h
board1/key/: key.c  key.h
board1/menu/: menu.c  menu.h
board1/mpu6050/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  mpu6050.c  mpu6050.h
board1/ringbuffer/: ringbuffer.c  ringbuffer.h
board1/st7789/: fonts.c  fonts.h  st7789.c  st7789.h
board1/task/: air_task.c  air_task.h  community_task.c  community_task.h  time_task.c  time_task.h  tumble_detect_task.c  tumble_detect_task.h  ui_task.c  ui_task.h  wifi_task.c  wifi_task.h
board2/: BUILD.gn  board2.c  board2.h  more.c  more.h
board2/asrpro/: asrpro.c  asrpro.h
board2/community/: community_t.c  community_t.h
board2/task/: community_task.c  community_task.h  more_task.c  more_task.h
weixin_app/: app.json  project.config.json  project.private.config.json
weixin_app/pages/datashow/: datashow.js  datashow.wxml  datashow.wxss
weixin_app/pages/history/: history.js  history.wxml  history.wxss
weixin_app/pages/index/: index.js  index.json  index.wxml  index.wxss
weixin_app/pages/login/: login.js  login.wxml  login.wxss
weixin_app/pages/messagenum/: messagenum.js  messagenum.json  messagenum.wxml  messagenum.wxss
weixin_app/pages/my/: my.js  my.wxml  my.wxss
weixin_app/pages/position/: position.js  position.json  position.wxml  position.wxss
weixin_app/pages/register/: register.js  register.wxml
weixin_app/pages/setting/: setting.js  setting.json  setting.wxml  setting.wxss
weixin_app/pages/warn/: warn.js  warn.json  warn.wxml  warn.wxss
